# gn

base/mac/: foundation_util.h
src/base/files/: file_util.h  file_util_posix.cc
src/base/mac/: mac_logging.h  mac_logging.mm
src/gn/: functions_target.cc  variables.cc  xcode_writer.cc
src/gn/format_test_data/: 016.gn  029.golden  045.gn  045.golden  048.gn  048.golden  075.gn
src/util/: build_config.h
